<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BuyTicketActivity">

    <include
        android:id="@+id/include"
        layout="@layout/appbar_white" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextContent.TextTitle"
        android:text="@string/txt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/tv_studio"
        style="@style/TextContent.TextDesc"
        android:text="@string/txt_studio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/TextContent.TextTitle"
        android:text="@string/txt_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/TextContent.TextDesc"
        android:text="@string/txt_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_seat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#1F000000"
        android:paddingHorizontal="24dp"
        android:paddingTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_studio"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/radio_button_checked"
        android:text="@string/txt_screen"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_seat" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextContent.TextDesc"
        android:text="@string/txt_thumb_seat"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_seat"
        style="@style/TextContent.TextThumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/txt_seat" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextContent.TextThumb"
        android:text="@string/txt_total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_total_price" />

    <TextView
        android:id="@+id/tv_total_price"
        style="@style/TextContent.TextTitle"
        tools:text="@string/txt_price"
        app:layout_constraintBottom_toTopOf="@+id/btn_buy"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_buy"
        style="@style/ButtonLarge"
        android:text="@string/txt_buy_ticket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>