<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_horizontal"
    android:layout_marginVertical="@dimen/dimen_vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingVertical="@dimen/dimen_horizontal">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextContent.TextTitle"
                android:text="@string/txt_title"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TextContent.TextThumb"
                android:textColor="@color/material_on_primary_emphasis_medium"
                android:layout_marginTop="8dp"
                android:text="@string/txt_thumb_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextContent.TextTitle"
                android:text="@string/txt_date"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextContent.TextThumb"
                android:text="@string/txt_thumb_studio"
                android:textColor="@color/material_on_primary_emphasis_medium"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_studio"
                style="@style/TextContent.TextTitle"
                android:text="@string/txt_studio"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextContent.TextThumb"
                android:textColor="@color/material_on_primary_emphasis_medium"
                android:text="@string/txt_thumb_time"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/tv_time"
                android:textColor="@color/colorWhite"
                style="@style/TextContent.TextTitle"
                android:text="@string/txt_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C39F35">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/logo_movie_ticket"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/txt_logo" />

            <TextView
                android:id="@+id/textView8"
                style="@style/TextContent.TextThumb"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_thumb_seat"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/tv_seat"
                style="@style/TextContent.TextTitle"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_seat"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/qr_code"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/txt_qr_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>